--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     background-color: aqua;
     color: black;
     font-weight: bold;
+    display: inline;
 }
 #dedicated-team{
     text-decoration: underline;
