--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     background-color: aqua;
     color: black;
     font-weight: bold;
-    display: inline;
+    display: block;
 }
 #dedicated-team{
     text-decoration: underline;
@@ -73,7 +73,7 @@
 
 }
 #Logo{
-    width: 60px;
+    width: 150px;
     float: right;
     margin-top: 0px;
 }
