--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 #heading{
 
     color: blue;
-    background-color: none;
+    background-color: grey;
     font-family: cursive;
-    font: 100px;
-    text-align: left;
+    font: 60px;
+    text-align: center;
     text-decoration: underline;
     display: block;
    
@@ -14,7 +14,7 @@
     background-color: aqua;
     color: black;
     font-weight: bold;
-    display: block;
+  
 }
 #dedicated-team{
     text-decoration: underline;
