--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     color: blue;
     background-color: grey;
     font-family: cursive;
-    font: 15px;
+    font-weight: 15px;
     text-align: center;
     text-decoration: underline;
     display: block;
