--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 #heading{
 
-    color: blue;
+    color: white;
     background-color: grey;
     font-family: cursive;
     font-weight: 15px;
     text-align: center;
     text-decoration: underline;
     display: block;
+    border radius: 30px;
+    border: solid;
    
 
 }
