--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     text-align: center;
     text-decoration: underline;
     display: block;
-    border radius: 30px;
-    border: solid;
+    border radius: 60px;
+    border: 2px;
    
 
 }
