--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #heading{
 
     color: white;
-    background-image: url(images/Logo.jpg);
+    background-color: grey;
     font-family: cursive;
     font-weight: 15px;
     text-align: center;
