--- a/style.css
+++ b/style.css
@@ -76,8 +76,8 @@
 
 }
 #Logo1{
-    width: 50px;
-    float: left;
+    width: 20px;
+    float: right;
     margin-top: 0px;
     margin-left: 30px;
 }
