--- a/style.css
+++ b/style.css
@@ -152,3 +152,36 @@ li{
     color: blue;
     font-size: 20px;
 } 
+#vana{
+    width: 500px;
+    border-radius: 5px;
+}
+#apa{
+    width: 500px;
+    border-radius: 5px;
+}
+#vana{
+    width: 500px;
+    border-radius: 5px;
+}
+#tamba{
+    width: 500px;
+    border-radius: 5px;
+}
+#creche{
+    width: 500px;
+    border-radius: 5px;
+}
+#day{
+    width: 500px;
+    border-radius: 5px;
+}
+#kids{width: 500px;
+    border-radius: 5px;
+}
+#nhasi{width: 500px;
+    border-radius: 5px;
+ }
+#tese{width: 500px;
+    border-radius: 5px;
+     }
