--- a/style.css
+++ b/style.css
@@ -185,3 +185,12 @@ li{
 #tese{width: 500px;
     border-radius: 5px;
      }
+#cont{
+    margin-left: 12px;
+    margin-right: 12px;
+}
+#event{
+    margin-left: 12px;
+    margin-right: 12px;
+    
+}
