--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
     font-weight: bold;
     background-image: url(images/background.jpg);
     background-size: cover;
+    color: white;
     
 }
 #myButton{
