--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     color: blue;
 }
 #main-bodyb{
-    background-color: goldenrod;
+    background-color: white;
     color: black;
     font-family: 'Times New Roman', Times, serif;
 
