--- a/style.css
+++ b/style.css
@@ -202,3 +202,11 @@ li{
 #map{
     font-size: 20px;
 }
+#home{
+    colour: white;
+    font-size: 25px;
+}
+#info{
+     colour: white;
+    font-size: 25px
+}
