--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     font-weight: bold;
-    background-image: url(images/background.jpg);
+    background-image: url(images/logo.jpg);
     background-size: cover;
     color: white;
     
