--- a/style.css
+++ b/style.css
@@ -211,3 +211,67 @@ li{
     font-size: 18px;
     margin-left: 12px;
 }
+#1{
+    width: 500px;
+    border-radius: 5px;
+}
+#{
+    width: 500px;
+    border-radius: 5px;
+}
+#2{
+    width: 500px;
+    border-radius: 5px;
+}
+#3{
+    width: 500px;
+    border-radius: 5px;
+}
+#5{
+    width: 500px;
+    border-radius: 5px;
+}
+#5{
+    width: 500px;
+    border-radius: 5px;
+}
+#6{
+    width: 500px;
+    border-radius: 5px;
+}
+#7{
+    width: 500px;
+    border-radius: 5px;
+}
+#8{
+    width: 500px;
+    border-radius: 5px;
+}
+#9{
+    width: 500px;
+    border-radius: 5px;
+}
+#10{
+    width: 500px;
+    border-radius: 5px;
+}
+#11{
+    width: 500px;
+    border-radius: 5px;
+}
+#12{
+    width: 500px;
+    border-radius: 5px;
+}
+#13{
+    width: 500px;
+    border-radius: 5px;
+}
+#14{
+    width: 500px;
+    border-radius: 5px;
+}
+#15{
+    width: 500px;
+    border-radius: 5px;
+}
