--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ li{
     font-size: 18px;
     margin-left: 12px;
 }
-#1{
+#ba{
     width: 500px;
     border-radius: 5px;
 }
@@ -219,59 +219,59 @@ li{
     width: 500px;
     border-radius: 5px;
 }
-#2{
+#be{
     width: 500px;
     border-radius: 5px;
 }
-#3{
+#bi{
     width: 500px;
     border-radius: 5px;
 }
-#4{
+#bo{
     width: 500px;
     border-radius: 5px;
 }
-#5{
+#bu{
     width: 500px;
     border-radius: 5px;
 }
-#6{
+#ha{
     width: 500px;
     border-radius: 5px;
 }
-#7{
+#he{
     width: 500px;
     border-radius: 5px;
 }
-#8{
+#hi{
     width: 500px;
     border-radius: 5px;
 }
-#9{
+#ho{
     width: 500px;
     border-radius: 5px;
 }
-#10{
+#hu{
     width: 500px;
     border-radius: 5px;
 }
-#11{
+#ga{
     width: 500px;
     border-radius: 5px;
 }
-#12{
+#ge{
     width: 500px;
     border-radius: 5px;
 }
-#13{
+#gi{
     width: 500px;
     border-radius: 5px;
 }
-#14{
+#go{
     width: 500px;
     border-radius: 5px;
 }
-#15{
+#gu{
     width: 500px;
     border-radius: 5px;
 }
