--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@
 }
 #main-body{
     background-color: white;
-    color: black;
+    color: blue;
     font-weight: bold;
+    align-items: center;
+    text-align: center;
   
 }
 #dedicated-team{
@@ -28,7 +30,7 @@
 }
 #main-bodyb{
     background-color: white;
-    color: black;
+    color: blue;
     font-family: 'Times New Roman', Times, serif;
 
 }
