--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@
     background-color: white;
     color: blue;
     font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    align-items:center;
 
 }
 #bodyc{
