--- a/style.css
+++ b/style.css
@@ -216,67 +216,67 @@ li{
     margin-left: 12px;
 }
 #ba{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #be{
-    width: 500px;
+    width: 7;
     border-radius: 5px;
 }
 #bi{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #bo{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #bu{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #ha{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #he{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #hi{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #ho{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #hu{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #ga{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #ge{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #gi{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #go{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #gu{
-    width: 500px;
+    width: 700px;
     border-radius: 5px;
 }
 #subscribe{
