--- a/style.css
+++ b/style.css
@@ -24,9 +24,10 @@
     text-decoration: underline;
     color: blue;
 }
-#our-mission{
+#our{
     text-decoration: underline;
     color: blue;
+    text-align: center;
 }
 #main-bodyb{
     background-color: white;
