--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ li{
 #vana{
     width: 500px;
     border-radius: 5px;
+    margin-right: 12px;
 }
 #apa{
     width: 500px;
@@ -169,6 +170,7 @@ li{
 #vana{
     width: 500px;
     border-radius: 5px;
+    margin-right: 12px;
 }
 #tamba{
     width: 500px;
@@ -177,6 +179,7 @@ li{
 #creche{
     width: 500px;
     border-radius: 5px;
+    margin-right: 12px;
 }
 #day{
     width: 500px;
@@ -184,6 +187,7 @@ li{
 }
 #kids{width: 500px;
     border-radius: 5px;
+      margin-right: 12px;
 }
 #nhasi{width: 500px;
     border-radius: 5px;
