--- a/style.css
+++ b/style.css
@@ -38,11 +38,11 @@
 
 }
 #bodyc{
-    background-color: white;
+
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     font-weight: bold;
-    background-image: url(images/logo.jpg);
+    background-image: url(images/logo.jpg)
     background-size: cover;
     color: blue;
     
