--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
     font-weight: bold;
-    background-image: url(images/logo.jpg)
+    background-image: url(images/Logo.jpg)
     background-size: cover;
     color: blue;
     
