--- a/style.css
+++ b/style.css
@@ -318,3 +318,43 @@ border-radius: 2px;
     opacity: 0.7;
     cursor: pointer;
 }
+#ta{
+    width: 500px;
+    border-radius: 5px;
+}
+#tb{
+    width: 500px;
+    border-radius: 5px;
+}
+#tc{
+    width: 500px;
+    border-radius: 5px;
+}
+#td{
+    width: 500px;
+    border-radius: 5px;
+}
+#te{
+    width: 500px;
+    border-radius: 5px;
+}
+#tf{
+    width: 500px;
+    border-radius: 5px;
+}
+#tg{
+    width: 500px;
+    border-radius: 5px;
+}
+#th{
+    width: 500px;
+    border-radius: 5px;
+}
+#ti{
+    width: 500px;
+    border-radius: 5px;
+}
+#tj{
+    width: 500px;
+    border-radius: 5px;
+}
